Revision history for String::Tools.

{{$NEXT}}
 - Change define to a defined value by `!!` it
 - Added/improved several tests

0.14.163  2014-06-12

 - Updated to use several Dist::Zilla features and plugins.
 - Improved documentation.
